# menu_generation

./: README.md  manage.py  pyproject.toml
menu_generation/: admin.py  apps.py  models.py  urls.py
menu_generation/management/commands/: create_menu.py
menu_generation/migrations/: 0001_initial.py  0002_alter_menuitem_options.py  0003_alter_menuitem_options.py
menu_generation/templates/: index.html
menu_generation/templatetags/: draw_menu.py
uptrader_service/: asgi.py  settings.py  urls.py  wsgi.py
